<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".view.login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

<!--        <ImageView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:src="" />-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="105dp"
            android:fontFamily="@font/outfit_mediumm"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#000"
            android:textSize="50dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_mediumm"
            android:gravity="center"
            android:text="@string/login_desc"
            android:textColor="#75000000"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutUser"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:hint="Usuario"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:startIconDrawable="@drawable/account_two"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconTint="#000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutPass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:hint="Contraseña"
                app:passwordToggleEnabled="true"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:startIconDrawable="@drawable/pass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconTint="#000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:id="@+id/chRemember"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="0dp"
                    android:buttonTint="@color/black"
                    android:text="@string/check"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/btnFpass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget"
                    android:textColor="@color/black"
                    android:background="#00000000"
                    android:fontFamily="@font/outfit_regular"
                    android:textSize="17dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:textAllCaps="false"
                    />

            </RelativeLayout>

            <Button
                android:id="@+id/btnLoginLG"
                android:layout_width="151dp"
                android:layout_height="62dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="95dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#000"
                android:fontFamily="@font/montserrat_semiboldd"
                android:gravity="center"
                android:text="@string/btnLog"
                android:textAllCaps="false"
                android:textSize="17dp" />

            <Button
                android:id="@+id/btnSinUpLG"
                android:layout_width="355dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="#00000000"
                android:fontFamily="@font/outfit_semiboldd"
                android:text="@string/singUp"
                android:textAlignment="center"
                android:textColor="@color/black" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>